Fix bio photo on mobile: show full image without cropping

--- a/style.css
+++ b/style.css
@@ -1065,6 +1065,14 @@ footer nav a:hover {
   }
   .biography .split-img {
     order: -1;
+    height: auto;
+    position: static;
+  }
+  .biography .split-img img {
+    position: static;
+    width: 100%;
+    height: auto;
+    object-fit: unset;
   }
 }
 
